--- a/Pages/Step 1.html
+++ b/Pages/Step 1.html
@@ -105,7 +105,7 @@
     </video>
 
     <div class="back-button">
-        <a href="../Big Data.html">
+        <a href="../Index.html">
             <img src="../multimedia/Boton-Back.png" alt="Volver">
         </a>
     </div>
