--- a/Pages/Linea de Tiempo Big Data.html
+++ b/Pages/Linea de Tiempo Big Data.html
@@ -64,25 +64,6 @@
             cursor: pointer;
         }
 
-        .content {
-            padding: 20px;
-            max-width: 1200px;
-            margin: auto;
-        }
-
-        .reflection {
-            background: #f0f0f0;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .reflection p {
-            margin: 0 0 15px 0;
-            font-size: 1.2em;
-            color: #333;
-        }
-
         .footer {
             position: fixed;
             bottom: 10px;
@@ -91,19 +72,16 @@
             color: #3a3a3a;
         }
 
-        .footer img {
-            width: 50px;
-            margin-top: 10px;
+        .footer a {
+            color: #314152;
+            text-decoration: none;
+            font-weight: 600;
         }
 
         @media (max-width: 768px) {
             header h1 {
                 font-size: 2em;
                 line-height: 20vh;
-            }
-
-            .reflection p {
-                font-size: 1em;
             }
         }
     </style>
@@ -122,91 +100,13 @@
             <img src="../multimedia/Boton-Back.png" alt="Volver">
         </a>
     </div>
-    <ul class="timeline">
-        <li onclick="toggleReference(this)">
-            <span>35,000 BC</span>: Use of the Lebombo bone for data recording
-            <div class="reference">
-                <p>Speculation about the use of the Lebombo bone in South Africa for data recording.</p>
-                <p><a href="https://elibro-net.bibliotecavirtual.unad.edu.co/es/lc/unad/titulos/122682" target="_blank">Holmes, D. E. (2018). <i>Big Data: A Brief Introduction</i>. Antoni Bosch.</a></p>
-            </div>
-        </li>
-        <li onclick="toggleReference(this)">
-            <span>20,000 BC</span>: Use of the Ishango bone for data recording
-            <div class="reference">
-                <p>Speculation about the use of the Ishango bone in Africa for data recording.</p>
-                <p><a href="https://elibro-net.bibliotecavirtual.unad.edu.co/es/lc/unad/titulos/122682" target="_blank">Holmes, D. E. (2018). <i>Big Data: A Brief Introduction</i>. Antoni Bosch.</a></p>
-            </div>
-        </li>
-        <li onclick="toggleReference(this)">
-            <span>1300 AD – 1532 AD</span>: Use of quipus in Latin America
-            <div class="reference">
-                <p>Quipus, systems for storing statistics made from cotton and wool, were the primary information recording system of the Inca period.</p>
-                <p><a href="https://elibro-net.bibliotecavirtual.unad.edu.co/es/lc/unad/titulos/122031" target="_blank">Ríos Insua, D. & Gómez-Ullate Oteiza, D. (2019). <i>Big Data: Concepts, Technologies, and Applications</i>. Editorial CSIC Consejo Superior de Investigaciones Científicas.</a></p>
-            </div>
-        </li>
-        <li onclick="toggleReference(this)">
-            <span>431 BC</span>: Use of statistical mode in the Athens war
-            <div class="reference">
-                <p>Solders use statistical mode to estimate the height of a wall, based on brick counting.</p>
-                <p><a href="https://elibro-net.bibliotecavirtual.unad.edu.co/es/lc/unad/titulos/122682" target="_blank">Holmes, D. E. (2018). <i>Big Data: A Brief Introduction</i>. Antoni Bosch.</a></p>
-            </div>
-        </li>
-        <li onclick="toggleReference(this)">
-            <span>1869</span>: Adolphe Quetelet and Social Statistics
-            <div class="reference">
-                <p>Development of Social Statistics to support governments, based on the idea that statistical regularities provide signals about social realities.</p>
-                <p><a href="https://elibro-net.bibliotecavirtual.unad.edu.co/es/lc/unad/titulos/122031" target="_blank">Ríos Insua, D. & Gómez-Ullate Oteiza, D. (2019). <i>Big Data: Concepts, Technologies, and Applications</i>. Editorial CSIC Consejo Superior de Investigaciones Científicas.</a></p>
-            </div>
-        </li>
-        <li onclick="toggleReference(this)">
-            <span>1870</span>: Herman Hollerith and the Tabulating Machine
-            <div class="reference">
-                <p>Development of the tabulating machine, drastically reducing the time needed to analyze censuses in the U.S. This machine was the precursor to what would later become IBM.</p>
-                <p><a href="https://elibro-net.bibliotecavirtual.unad.edu.co/es/lc/unad/titulos/122682" target="_blank">Holmes, D. E. (2018). <i>Big Data: A Brief Introduction</i>. Antoni Bosch.</a></p>
-            </div>
-        </li>
-        <li onclick="toggleReference(this)">
-            <span>Late 19th Century</span>: Early Big Data developments in Astronomy and Genetics
-            <div class="reference">
-                <p>In Astronomy, the Sloan Digital Sky Survey project generated more data in its early months than had been accumulated in the history of astronomy. In Genetics, the need to create large human maps that can generate up to 100 gigabytes per person.</p>
-                <p><a href="https://elibro-net.bibliotecavirtual.unad.edu.co/es/lc/unad/titulos/11774" target="_blank">Casas Roma, J., Nin Guerrero, J. & Julbe López, F. (2019). <i>Big Data: Data Analysis in Massive Environments</i>. Editorial UOC.</a></p>
-            </div>
-        </li>
-        <li onclick="toggleReference(this)">
-            <span>World War II</span>: Birth of Operations Research
-            <div class="reference">
-                <p>Creation of Operations Research as a method to support military decision-making for the U.S. and the United Kingdom.</p>
-                <p><a href="https://elibro-net.bibliotecavirtual.unad.edu.co/es/lc/unad/titulos/122031" target="_blank">Ríos Insua, D. & Gómez-Ullate Oteiza, D. (2019). <i>Big Data: Concepts, Technologies, and Applications</i>. Editorial CSIC Consejo Superior de Investigaciones Científicas.</a></p>
-            </div>
-        </li>
-        <li onclick="toggleReference(this)">
-            <span>2001</span>: Doug Laney Introduces the 3Vs of Big Data
-            <div class="reference">
-                <p>Definition of Big Data as a set of tools and technologies for transforming data in environments of large volume, variety, and velocity. This definition is based on the 3Vs:</p>
-                <ul>
-                    <li><b>Volume</b>: The amount of data matters, ranging from terabytes to petabytes.</li>
-                    <li><b>Velocity</b>: The speed at which data is received and processed.</li>
-                    <li><b>Variety</b>: Diversity of data types, from structured to unstructured and semi-structured.</li>
-                </ul>
-                <p><a href="https://elibro-net.bibliotecavirtual.unad.edu.co/es/lc/unad/titulos/11774" target="_blank">Casas Roma, J., Nin Guerrero, J. & Julbe López, F. (2019). <i>Big Data: Data Analysis in Massive Environments</i>. Editorial UOC.</a></p>
-            </div>
-        </li>
-        <li onclick="toggleReference(this)">
-            <span>2001</span>: IBM's Definition of Big Data
-            <div class="reference">
-                <p>IBM defines Big Data as large volumes of data from a wide variety of sources with a certain degree of uncertainty (Veracity) that may be necessary to process for rapid responses.</p>
-                <ul>
-                    <li><b>Volume</b></li>
-                    <li><b>Velocity</b></li>
-                    <li><b>Variety</b></li>
-                    <li><b>Veracity</b>: The quality and accuracy of the data.</li>
-                </ul>
-                <p><a href="https://elibro-net.bibliotecavirtual.unad.edu.co/es/lc/unad/titulos/11774" target="_blank">Casas Roma, J., Nin Guerrero, J. & Julbe López, F. (2019). <i>Big Data: Data Analysis in Massive Environments</i>. Editorial UOC.</a></p>
-            </div>
-        </li>
-</ul>
-<div class="footer">
-    © Andrés Agudelo
-</div>
+    <script src="https://static-bundles.visme.co/visme-embed.js"></script>
+    <div class="visme_d" data-title="BIG DATA" data-url="017r8639-big-data" data-w="800" data-full-h="false" data-h="1438" data-domain="my"></div>
+    <p style="width:220px !important;border-radius:3px !important;padding:3px !important;font-size:12px !important;font-family:Arial, sans-serif !important;color:#314152 !important;white-space:nowrap !important">
+        Hecho con <a href="https://www.visme.co/make-infographics?utm_source=CTA&amp;utm_medium=Embed" target="_blank" rel="noreferrer" style="font-weight:600 !important;text-decoration:none !important;font-size:12px !important;font-family:Arial, sans-serif !important;color:#314152 !important;white-space:nowrap !important">Visme Infographic Maker</a>
+    </p>
+    <div class="footer">
+        © Andrés Agudelo
+    </div>
 </body>
 </html>
