Update Implicaciones del Big Data.html

--- a/Pages/Implicaciones del Big Data.html
+++ b/Pages/Implicaciones del Big Data.html
@@ -179,49 +179,39 @@
         </a>
     </div>
 
-    <div class="content">
-        <table>
-            <thead>
-                <tr>
-                    <th>Aspect</th>
-                    <th>Advantages</th>
-                    <th>Disadvantages</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Scalability</td>
-                    <td>Handles growing volumes of data without losing performance.</td>
-                    <td>Requires significant investment in scalable infrastructure and technologies.</td>
-                </tr>
-                <tr>
-                    <td>Fraud Detection</td>
-                    <td>Enhances the ability to detect irregular patterns and fraud in real-time.</td>
-                    <td>Complexity and volume of data can lead to false positives, increasing operational costs.</td>
-                </tr>
-                <tr>
-                    <td>Accessibility</td>
-                    <td>Facilitates access to relevant information for users regardless of location.</td>
-                    <td>Differences in infrastructure and access capabilities can create a digital divide.</td>
-                </tr>
-                <tr>
-                    <td>Task Automation</td>
-                    <td>Allows automation of complex processes and repetitive tasks, improving operational efficiency.</td>
-                    <td>Automation may reduce the need for labor, potentially impacting employment in certain sectors.</td>
-                </tr>
-                <tr>
-                    <td>Resource Optimization</td>
-                    <td>Helps maximize the use of available resources, reducing costs and increasing efficiency.</td>
-                    <td>Can lead to overreliance on data, overlooking other important qualitative factors.</td>
-                </tr>
-                <tr>
-                    <td>Continuous Improvement</td>
-                    <td>Enables ongoing analysis and enhancement of products, services, and processes based on data.</td>
-                    <td>Constant need for updates can be costly and complex to manage.</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+<div class="content">
+    <table>
+        <thead>
+            <tr>
+                <th>Aspecto</th>
+                <th>Ventajas</th>
+                <th>Desventajas</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Sociedad</td>
+                <td>- Mejora la toma de decisiones públicas al proporcionar datos precisos y relevantes.</td>
+                <td>- Riesgo de privacidad y seguridad de los datos personales.</td>
+            </tr>
+            <tr>
+                <td>Economía</td>
+                <td>- Permite optimización de recursos y eficiencia operativa en empresas.</td>
+                <td>- Puede generar desigualdades económicas debido a la brecha digital.</td>
+            </tr>
+            <tr>
+                <td>Ciencia</td>
+                <td>- Facilita el análisis de grandes volúmenes de datos para investigaciones avanzadas, como en astronomía y genética.</td>
+                <td>- Requiere inversiones significativas en infraestructura y tecnología.</td>
+            </tr>
+            <tr>
+                <td>Tecnología e Innovación</td>
+                <td>- Fomenta el desarrollo de nuevas tecnologías y metodologías, como el procesamiento en paralelo.</td>
+                <td>- La rápida evolución tecnológica puede dejar obsoletas las inversiones y sistemas anteriores.</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
 
     <div class="footer">
         <p>&copy; Andrés Agudelo</p>
