Update Implicaciones del Big Data.html

--- a/Pages/Implicaciones del Big Data.html
+++ b/Pages/Implicaciones del Big Data.html
@@ -183,36 +183,35 @@
     <table>
         <thead>
             <tr>
-                <th>Aspecto</th>
-                <th>Ventajas</th>
-                <th>Desventajas</th>
+                <th>Aspect</th>
+                <th>Advantages</th>
+                <th>Disadvantages</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td>Sociedad</td>
-                <td>- Mejora la toma de decisiones públicas al proporcionar datos precisos y relevantes.</td>
-                <td>- Riesgo de privacidad y seguridad de los datos personales.</td>
+                <td>Society</td>
+                <td>- Enhances public decision-making by providing accurate and relevant data.</td>
+                <td>- Risks to privacy and personal data security.</td>
             </tr>
             <tr>
-                <td>Economía</td>
-                <td>- Permite optimización de recursos y eficiencia operativa en empresas.</td>
-                <td>- Puede generar desigualdades económicas debido a la brecha digital.</td>
+                <td>Economy</td>
+                <td>- Allows optimization of resources and operational efficiency in businesses.</td>
+                <td>- Can create economic inequalities due to the digital divide.</td>
             </tr>
             <tr>
-                <td>Ciencia</td>
-                <td>- Facilita el análisis de grandes volúmenes de datos para investigaciones avanzadas, como en astronomía y genética.</td>
-                <td>- Requiere inversiones significativas en infraestructura y tecnología.</td>
+                <td>Science</td>
+                <td>- Facilitates the analysis of large data volumes for advanced research, such as in astronomy and genetics.</td>
+                <td>- Requires significant investments in infrastructure and technology.</td>
             </tr>
             <tr>
-                <td>Tecnología e Innovación</td>
-                <td>- Fomenta el desarrollo de nuevas tecnologías y metodologías, como el procesamiento en paralelo.</td>
-                <td>- La rápida evolución tecnológica puede dejar obsoletas las inversiones y sistemas anteriores.</td>
+                <td>Technology and Innovation</td>
+                <td>- Promotes the development of new technologies and methodologies, such as parallel processing.</td>
+                <td>- Rapid technological evolution can render investments and systems obsolete.</td>
             </tr>
         </tbody>
     </table>
 </div>
-
     <div class="footer">
         <p>&copy; Andrés Agudelo</p>
     </div>
