Update Implicaciones del Big Data.html

--- a/Pages/Implicaciones del Big Data.html
+++ b/Pages/Implicaciones del Big Data.html
@@ -191,23 +191,23 @@
         <tbody>
             <tr>
                 <td>Society</td>
-                <td>- Enhances public decision-making by providing accurate and relevant data.</td>
-                <td>- Risks to privacy and personal data security.</td>
+                <td>Enhances public decision-making by providing accurate and relevant data.</td>
+                <td>Risks to privacy and personal data security.</td>
             </tr>
             <tr>
                 <td>Economy</td>
-                <td>- Allows optimization of resources and operational efficiency in businesses.</td>
-                <td>- Can create economic inequalities due to the digital divide.</td>
+                <td>Allows optimization of resources and operational efficiency in businesses.</td>
+                <td>Can create economic inequalities due to the digital divide.</td>
             </tr>
             <tr>
                 <td>Science</td>
-                <td>- Facilitates the analysis of large data volumes for advanced research, such as in astronomy and genetics.</td>
-                <td>- Requires significant investments in infrastructure and technology.</td>
+                <td>Facilitates the analysis of large data volumes for advanced research, such as in astronomy and genetics.</td>
+                <td>Requires significant investments in infrastructure and technology.</td>
             </tr>
             <tr>
                 <td>Technology and Innovation</td>
-                <td>- Promotes the development of new technologies and methodologies, such as parallel processing.</td>
-                <td>- Rapid technological evolution can render investments and systems obsolete.</td>
+                <td>Promotes the development of new technologies and methodologies, such as parallel processing.</td>
+                <td>Rapid technological evolution can render investments and systems obsolete.</td>
             </tr>
         </tbody>
     </table>
