--- a/Pages/Reflexion.html
+++ b/Pages/Reflexion.html
@@ -127,8 +127,8 @@
 
     <div class="content">
         <div class="reflection">
-            <p>Nowadays, it is impossible not to generate data with the new technologies and devices we use daily. From cell phones that connect to gadgets to measure our heart rate, to GPS that use satellites to determine our geographic location, or payment methods like NFC technology in cell phones or credit cards when buying a coffee, the volume of information is immense and comes in various formats. This presents a challenge in processing the information within the necessary time for it to be useful in decision-making.</p>
-            <p>This is where Big Data becomes relevant—a set of processes for extracting, transforming, analyzing, and visualizing complex data. Consequently, Big Data meets the need to turn this data into actionable information, as data that is not consumed is inert data.</p>
+            <p>Nowadays, it is impossible not to generate data with the new technologies and devices we use daily. From cell phones that connect to gadgets to measure our heart rate, to GPS that use satellites to determine our geographic location, or payment methods like NFC technology in cell phones or credit cards when buying a coffee, the volume of information is immense and comes in various formats. This presents a challenge in processing the information within the necessary time for it to be useful in decision making.</p>
+            <p>This is where Big Data becomes relevant a set of processes for extracting, transforming, analyzing, and visualizing complex data. Consequently, Big Data meets the need to turn this data into actionable information, as data that is not consumed is inert data.</p>
         </div>
     </div>
     <div class="footer">
