--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
-            opacity: 0.45; /* Transparencia del 75% */
-            filter: invert(100%) saturate(2%); /* Invertir colores y saturación reducida */
+            opacity: 0.45;
+            filter: invert(100%) saturate(2%);
             z-index: -1;
         }
 
@@ -37,15 +37,15 @@
         }
 
         h1 {
-            color: hsl(0, 0%, 23%); /* Color del título */
-            font-size: 4em; /* Tamaño del título aumentado */
-            margin: 0 0 30px 0; /* Separación inferior del título */
+            color: hsl(0, 0%, 23%);
+            font-size: 4em;
+            margin: 0 0 30px 0;
             font-family: 'Arial Narrow', sans-serif;
             text-transform: uppercase;
         }
 
         h2 {
-            color: #49494900; /* Color de Andrés Agudelo */
+            color: #49494900;
             font-size: 1.5em;
             margin: 10px 0;
             font-family: 'Arial Narrow', sans-serif;
@@ -63,11 +63,11 @@
         }
 
         .button {
-            background-color: hsla(0, 0%, 44%, 0.74); /* Color del botón */
+            background-color: hsla(0, 0%, 44%, 0.74);
             color: #fff;
             border: none;
-            padding: 10px 20px; /* Botón más pequeño */
-            font-size: 0.9em; /* Tamaño de fuente reducido */
+            padding: 10px 20px;
+            font-size: 0.9em;
             text-decoration: none;
             border-radius: 5px;
             margin: 10px;
@@ -84,7 +84,7 @@
             bottom: 10px;
             text-align: center;
             width: 100%;
-            color: #3b3b3b; /* Color del copyright */
+            color: #3b3b3b;
             font-family: 'Arial Narrow', sans-serif;
         }
 
@@ -95,7 +95,7 @@
 
         @media (max-width: 908px) {
             h1 {
-                font-size: 3em; /* Tamaño reducido para pantallas pequeñas */
+                font-size: 3em;
             }
 
             h2 {
@@ -103,8 +103,8 @@
             }
 
             .button {
-                padding: 8px 16px; /* Tamaño de botón adaptado para pantallas pequeñas */
-                font-size: 0.8em; /* Tamaño de fuente adaptado */
+                padding: 8px 16px;
+                font-size: 0.8em;
             }
         }
     </style>
@@ -123,6 +123,7 @@
         
         <div class="button-container">
             <a href="Pages/Step 1.html" class="button">Step 1</a>
+            <a href="Pages/Step 2.html" class="button">Step 2</a>
         </div>
     </div>
     
