--- a/Pages/Step 2.html
+++ b/Pages/Step 2.html
@@ -115,7 +115,7 @@
         <h1>STEP 2 - BIG DATA INTEGRATION</h1>
         <p></p>
         <nav>
-            <a href="Data domain.html">Description of Data domain</a>
+            <a href="Data_Domain.html">Description of Data domain</a>
             <a href="Map Conceptual Big Data and Machine Learning.html">Big Data and Machine Learning Concept Map</a>
             <a href="Description of Data training, validation, and test.html">Description of Data training, validation, and test</a>
             <a href="Distincion Machine Learning.html">Distincion Machine Learning</a>
